# race-predictor

./: .gitignore  README.md  pyproject.toml
src/: conformal.py  evaluation.py  ingest.py  point_baselines.py  riegel_calibration.py
